<resources>
    <string name="app_name">TaskMaster</string>

    <!--Main Activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!-- Actividad Registro -->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombre</string>
    <string name="CorreoEt">Correo electronico</string>
    <string name="ContrasenaEt">Contraseña</string>
    <string name="ConfirmarContrasenaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="Tengounacuenta">Tengo una cuenta</string>

    <!-- Menu Principal -->

    <string name="BienvenidoPrincipal">Bienvenido</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="AgregaNota">+</string>
    <string name="Btn_Ajustes"> </string>
    <string name="FraseAnimoTXT">Frase</string>
    <string name="TareasPendientesTXT">Tareas pendientes:</string>
    <string name="TareasCompletadasTXT">Tareas completadas:</string>

    <!-- LogIn -->
    <string name="CorreoLogin">Correo electronico</string>
    <string name="ContrasenaLogin">Contraseña</string>
    <string name="LogearUsuario">Entrar</string>
    <string name="NuevoUsuario">No tienes cuenta? Registrate aqui!</string>
    <string name="LoginTXT">Log In</string>

    <!-- Agregar Tarea -->
    <string name="Uid_Usuario">Uid del Usuario</string>
    <string name="Correo_usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">dd/mm/aaaa</string>
    <string name="Estado">No finalizado</string>
    <string name="Btn_RegistraNota">Guardar</string>
    <string name="CrearTarea">Crear tarea</string>

    <!-- ITEM TAREA -->
    <string name="fecha_hora_actualItem">Fecha y hora actual</string>
    <string name="tituloItem">Titulo</string>
    <string name="descripcionItem">Descripcion</string>
    <string name="fechaItem">dd/mm/aaaa</string>
    <string name="estadoItem">No finalizado</string>
    <string name="Uid_UsuarioItem">Uid del Usuario</string>
    <string name="Tid_TareaItem">Tid de la tarea</string>

    <!-- OPCIONES TAREA -->
    <string name="OpcionesTXT">Opciones</string>
    <string name="O_Eliminar">Eliminar</string>
    <string name="O_Editar">Editar</string>
    <string name="tituloOpcion">Titulo</string>
    <string name="descripcionOpcion">Descripcion</string>
    <string name="fechaOpcion">dd/mm/aaaa</string>
    <string name="estadoOpcion">No finalizado</string>

    <!-- SUBTAREAS TAREA -->
    <string name="SubtareaTXT">Subtareas de --</string>
    <string name="tituloSubtarea">Titulo</string>
    <string name="estadoSubtarea">No finalizado</string>

    <!-- ITEM SUBTAREA -->
    <string name="tituloItemS">Titulo</string>
    <string name="estadoItemS">No finalizado</string>
    <string name="Sid_SubtareaItem">Sid de la subtarea</string>

    <!-- ACTUALIZAR TAREA -->
    <string name="Tid_A">Tid de la tarea</string>
    <string name="Uid_Usuario_A">Uid del Usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_hora_actual_A">Fecha y hora actual</string>
    <string name="Titulo_A">Titulo</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A">dd/mm/aaaa</string>
    <string name="Estado_A">No finalizado</string>
    <string name="Btn_RegistraNota_A">Guardar</string>
    <string name="CrearTarea_A">Editar Tarea</string>

    <!-- AJUSTES -->
    <string name="AjustesTXT">Ajustes</string>
    <string name="CerrarSesion">Cerrar sesion</string>
    <string name="MostarTareasCompletada">Mostrar las tareas completadas</string>

</resources>