<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearTarea">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/CrearTarea"
            android:fontFamily="@font/robotoblack"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="30sp"
            android:hint="@string/Uid_Usuario"
            android:id="@+id/Uid_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/robotoblack"
            android:visibility="gone"/>
        <TextView
            android:hint="@string/Correo_usuario"
            android:id="@+id/Correo_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/robotoblack"
            android:visibility="gone"/>
        <TextView
            android:hint="@string/Fecha_hora_actual"
            android:id="@+id/Fecha_hora_Actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/robotoblack"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Titulo"
            android:id="@+id/Titulo"
            android:inputType="textCapWords"
            android:textSize="20sp"
            android:fontFamily="@font/robotoblack"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"
            android:id="@+id/Descripcion"
            android:inputType="textCapSentences"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/robotoblack"
            android:minHeight="150dp"
            android:gravity="start"/>

        <LinearLayout
            android:id="@+id/subtareasContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Btn_Calendario"
                android:id="@+id/Btn_Calendario"
                android:fontFamily="@font/robotoblack"
                android:drawableLeft="@drawable/icons8_calendario_48__1_"
                android:textSize="15sp"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Fecha"
                android:id="@+id/Fecha"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/robotoblack"
                android:textSize="20sp"
                android:layout_marginTop="-47dp"
                android:layout_gravity="end"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_RegistraNota"
            android:id="@+id/Guardar"
            android:textSize="20sp"
            android:fontFamily="@font/robotoblack"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Estado"
            android:id="@+id/Estado"
            android:textSize="20sp"
            android:layout_marginTop="1000sp"
            android:fontFamily="@font/robotoblack"
            android:visibility="visible"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>