<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CrearCuentaTXT"
        android:fontFamily="@font/robotoblack"
        android:textSize="25dp"
        android:gravity="center"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="Registro.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NombreEt"
                android:hint="@string/NombreEt"
                android:inputType="textPersonName|textCapWords"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:fontFamily="@font/robotoblack"/>
                        
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CorreoEt"
                android:hint="@string/CorreoEt"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoblack"
                android:padding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContrasenaEt"
                android:hint="@string/ContrasenaEt"
                android:inputType="textPassword"
                android:drawableStart="@drawable/contrasena"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoblack"
                android:padding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ConfirmarContrasenaEt"
                android:hint="@string/ConfirmarContrasenaEt"
                android:inputType="textPassword"
                android:drawableStart="@drawable/contrasena"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoblack"
                android:padding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:text="@string/RegistrarUsuario"
            android:id="@+id/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotoblack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tengounacuenta"
            android:id="@+id/Tengounacuenta"
            android:fontFamily="@font/robotoblack"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>