<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/cardViewContainer"
        tools:ignore="NotSibling">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewContainer"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:cardUseCompatPadding="true"
                android:padding="0.2dp"
                app:cardCornerRadius="15dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/NombresPrincipal"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NombresPrincipal"
                        android:fontFamily="@font/robotoblack"
                        android:textSize="20sp"/>
                    <!-- <TextView
                        android:id="@+id/CorreoPrincipal"
                        android:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CorreoPrincipal"
                        android:fontFamily="@font/robotoblack"
                        android:textSize="20sp"/> -->
                    <TextView
                        android:id="@+id/FraseAnimoTXT"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FraseAnimoTXT"
                        android:fontFamily="@font/robotoblack"
                        android:textSize="20sp"/>
                    <Button
                        android:id="@+id/Btn_Ajustes"
                        android:layout_gravity="end"
                        android:layout_marginTop="-110dp"
                        android:layout_width="80dp"
                        android:layout_height="46dp"
                        android:text="@string/Btn_Ajustes"
                        android:drawableRight="@drawable/icons8_ajustes"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/TareasPendientesTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoblack"
                android:text="@string/TareasPendientesTXT"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reciclerViewTareasPendientes"/>

            <TextView
                android:id="@+id/TareasCompletadasTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoblack"
                android:text="@string/TareasCompletadasTXT"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reciclerViewTareasCompletadas"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AgregaNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/AgregaNota"
        android:backgroundTint="@color/colorPrimaryLight"/>

</RelativeLayout>
