<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    app:cardCornerRadius="29dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <CheckBox
            android:id="@+id/checkboxEstadoS"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">
            <TextView
                android:id="@+id/tituloItemS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoblack"
                android:text="@string/tituloItemS"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/estadoItemS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoblack"
                android:text="@string/estadoItemS"
                android:layout_marginTop="4dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/Sid_SubtareaItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoblack"
                android:text="@string/Sid_SubtareaItem"
                android:layout_marginTop="4dp"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
